--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
       </div>
     </section>
 
-    <!-- ====== DAILY HUB: CLOCK + WEATHER (ENGLISH UNITS) + 3-DAY PRECIP AMOUNTS ====== -->
     <div class="card" id="hub-weather" style="margin-top:18px;">
       <div class="split">
         <div class="left">
@@ -104,31 +103,25 @@
           </div>
 
           <p class="notice" style="margin-top:14px;">
-            Weather numbers + precip amounts are rendered in <strong>English units</strong>. Radar embed (right side) is the MyRadar visual layer.
+            Weather numbers + precip amounts are rendered in <strong>English units</strong>. Radar (right side) is the MyRadar visual layer.
           </p>
         </div>
 
         <div class="right">
           <h2 style="margin-top:0;">Radar</h2>
           <p style="color:var(--muted);margin-top:-6px;">
-            Paste your MyRadar embed snippet below. Keep it simple: a single iframe is best.
+            Paste your MyRadar embed iframe here (replace the placeholder box).
           </p>
 
           <div style="border:1px solid rgba(255,255,255,.12);border-radius:12px;overflow:hidden;">
-            <!-- ✅ PASTE YOUR MYRADAR IFRAME HERE (replace the placeholder div below) -->
             <div style="height:360px;display:flex;align-items:center;justify-content:center;color:var(--muted);padding:12px;">
               MyRadar iframe goes here
             </div>
           </div>
-
-          <p class="notice" style="margin-top:12px;">
-            When you grab the MyRadar embed code, paste it right where the placeholder box is.
-          </p>
         </div>
       </div>
     </div>
 
-    <!-- ====== MARKETS: COMMODITIES + INDICES (TRADINGVIEW TICKER STRIP) ====== -->
     <div class="card" style="margin-top:18px;">
       <h2 style="margin-top:0;">Markets & Commodities</h2>
       <p style="color:var(--muted);margin-top:-6px;">
@@ -137,11 +130,7 @@
 
       <div class="tradingview-widget-container" style="margin-top:10px;">
         <div class="tradingview-widget-container__widget"></div>
-        <script
-          type="text/javascript"
-          src="https://s3.tradingview.com/external-embedding/embed-widget-ticker.js"
-          async
-        >
+        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker.js" async>
         {
           "symbols": [
             {"proName":"COMEX:GC1!","title":"Gold"},
@@ -283,21 +272,18 @@
     </div>
   </div>
 
-  <!-- Load your existing site script first -->
   <script src="site.js"></script>
 
-  <!-- Footer year + Hub logic -->
   <script>
-    // Footer year
     document.getElementById('y').textContent = new Date().getFullYear();
 
-    // ===== Millisecond clock + Weather (English units) =====
-    (() => {
-      // ---- Millisecond clock ----
+    (function () {
       const clockEl = document.getElementById("clock");
       const clockDateEl = document.getElementById("clockDate");
+
       function pad2(n){ return String(n).padStart(2,"0"); }
       function pad3(n){ return String(n).padStart(3,"0"); }
+
       function tickClock(){
         const d = new Date();
         clockEl.textContent = `${pad2(d.getHours())}:${pad2(d.getMinutes())}:${pad2(d.getSeconds())}.${pad3(d.getMilliseconds())}`;
@@ -306,8 +292,6 @@
       }
       requestAnimationFrame(tickClock);
 
-      // ---- Weather (NWS) ----
-      // Fairview Township (Erie County) centroid-ish starting point
       const LAT = 41.33639;
       const LON = -80.22012;
 
@@ -337,41 +321,37 @@
 
       async function fetchJSON(url){
         const res = await fetch(url, { headers: { "Accept":"application/ld+json,application/json" } });
-        if (!res.ok) throw new Error(`HTTP ${res.status} for ${url}`);
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
         return res.json();
       }
 
       async function updateCurrent(){
         const point = await fetchJSON(`https://api.weather.gov/points/${LAT},${LON}`);
-        const stationsUrl = point.properties.observationStations;
-        const stations = await fetchJSON(stationsUrl);
+        const stations = await fetchJSON(point.properties.observationStations);
         const firstStation = stations.observationStations?.[0];
         if (!firstStation) throw new Error("No observation station found.");
         const obs = await fetchJSON(`${firstStation}/observations/latest`);
 
-        const tC = obs.properties.temperature?.value;
-        const rh = obs.properties.relativeHumidity?.value;
+        const tC  = obs.properties.temperature?.value;
+        const rh  = obs.properties.relativeHumidity?.value;
         const wMs = obs.properties.windSpeed?.value;
-        const wDeg = obs.properties.windDirection?.value;
+        const wDeg= obs.properties.windDirection?.value;
 
-        tempFEl.textContent = (tC !== null && tC !== undefined) ? `${Math.round(cToF(tC))}°F` : "—";
-        humidityEl.textContent = (rh !== null && rh !== undefined) ? `${Math.round(rh)}%` : "—";
+        tempFEl.textContent   = (tC  !== null && tC  !== undefined) ? `${Math.round(cToF(tC))}°F` : "—";
+        humidityEl.textContent= (rh  !== null && rh  !== undefined) ? `${Math.round(rh)}%` : "—";
         windMphEl.textContent = (wMs !== null && wMs !== undefined) ? `${Math.round(msToMph(wMs))} mph` : "—";
-        windDirEl.textContent = (wDeg !== null && wDeg !== undefined) ? `${degToCardinal(wDeg)} (${Math.round(wDeg)}°)` : "—";
+        windDirEl.textContent = (wDeg!== null && wDeg!== undefined) ? `${degToCardinal(wDeg)} (${Math.round(wDeg)}°)` : "—";
 
         updatedAtEl.textContent = new Date(obs.properties.timestamp).toLocaleString();
-        noteEl.textContent = "Weather: NWS observations + NWS quantitative precipitation (converted to inches). Radar: MyRadar embed.";
       }
 
       async function updatePrecip3Day(){
         const point = await fetchJSON(`https://api.weather.gov/points/${LAT},${LON}`);
-        const gridDataUrl = point.properties.forecastGridData;
-        const grid = await fetchJSON(gridDataUrl);
-
+        const grid  = await fetchJSON(point.properties.forecastGridData);
         const series = grid.properties.quantitativePrecipitation?.values;
+
         if (!Array.isArray(series) || series.length === 0) {
           p1.textContent = p2.textContent = p3.textContent = "—";
-          noteEl.textContent = "Precip totals unavailable from NWS grid data right now.";
           return;
         }
 
@@ -383,21 +363,19 @@
           const start = new Date(startISO);
           if (start < now) continue;
 
-          const dayLabel = start.toLocaleDateString(undefined, { weekday:"short", month:"short", day:"numeric" });
-          const mm = (v.value ?? 0);
-          const inches = mmToIn(mm);
+          const label = start.toLocaleDateString(undefined, { weekday:"short", month:"short", day:"numeric" });
+          if (!buckets.has(label) && buckets.size >= 3) continue;
 
-          // Only accumulate first 3 distinct day labels
-          if (!buckets.has(dayLabel) && buckets.size >= 3) continue;
-          buckets.set(dayLabel, (buckets.get(dayLabel) || 0) + inches);
+          const mm = (v.value ?? 0);
+          buckets.set(label, (buckets.get(label) || 0) + mmToIn(mm));
         }
 
         const days = Array.from(buckets.entries()).slice(0,3);
         const labels = [p1L,p2L,p3L];
         const vals = [p1,p2,p3];
 
-        for (let i=0; i<3; i++){
-          if (!days[i]) { labels[i].textContent = `Day ${i+1}`; vals[i].textContent = "—"; continue; }
+        for (let i=0;i<3;i++){
+          if (!days[i]) { labels[i].textContent = `Day ${i+1}`; vals[i].textContent="—"; continue; }
           labels[i].textContent = days[i][0];
           vals[i].textContent = `${days[i][1].toFixed(2)} in`;
         }
@@ -406,8 +384,9 @@
       async function refreshAll(){
         try {
           await Promise.all([updateCurrent(), updatePrecip3Day()]);
+          noteEl.textContent = "Weather: NWS observations + NWS quantitative precipitation (converted to inches). Radar: MyRadar embed.";
         } catch (e) {
-          noteEl.textContent = `Weather load issue: ${e.message}`;
+          noteEl.textContent = `Weather load issue: ${e.message || e}`;
         }
       }
 
