--- a/index.html
+++ b/index.html
@@ -71,31 +71,28 @@
       }
 
       async function syncTime(){
-        // Primary: worldtimeapi.org
-        // Fallback: timeapi.world
-        try {
-          const r = await fetch("https://worldtimeapi.org/api/timezone/America/New_York", { cache: "no-store" });
-          if (!r.ok) throw new Error("worldtimeapi HTTP " + r.status);
-          const j = await r.json();
-          const serverMs = (j.unixtime * 1000);
-          offsetMs = serverMs - Date.now();
-          lastTimeSync = Date.now();
-          return;
-        } catch (e1) {
-          try {
-            const r2 = await fetch("https://gateway.timeapi.world/timezone/America/New_York", { cache: "no-store" });
-            if (!r2.ok) throw new Error("timeapi.world HTTP " + r2.status);
-            const j2 = await r2.json();
-            const serverMs = (j2.unixtime * 1000);
-            offsetMs = serverMs - Date.now();
-            lastTimeSync = Date.now();
-            return;
-          } catch (e2) {
-            syncEl.textContent = "Time sync failed (showing device time)";
-            offsetMs = 0;
-          }
-        }
-      }
+  // Time.Now (free, CORS-enabled, “atomic synchronized”)
+  // Docs: https://time.now/developer/api/timezone/America/New_York
+  try {
+    const r = await fetch("https://time.now/developer/api/timezone/America/New_York", { cache: "no-store" });
+    if (!r.ok) throw new Error("time.now HTTP " + r.status);
+    const j = await r.json();
+
+    // j.unixtime is seconds since epoch
+    const serverMs = (j.unixtime * 1000);
+    offsetMs = serverMs - Date.now();
+    lastTimeSync = Date.now();
+
+    // Optional: show abbreviation (EST/EDT) in the status line
+    // This keeps your label "Eastern Standard Time" as requested,
+    // while still showing what's actually active right now.
+    const abbr = j.abbreviation ? ` (${j.abbreviation})` : "";
+    syncEl.textContent = "Time synced" + abbr;
+  } catch (e) {
+    syncEl.textContent = "Time sync failed (showing device time)";
+    offsetMs = 0;
+  }
+}
 
       // ---------- Temperature (16124 → geocode → current temp) ----------
       const tempEl = document.getElementById("tempF");
