Add brand div above the heading in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <main class="wrap">
-    <h1>FREDONIA, PA 16124</h1>
+   <div class="brand">The Howard Homestead LLC</div>
+<h1>FREDONIA, PA 16124</h1>
 
     <section class="panel" aria-label="Time and weather">
       <div class="row">
