Add 3-day forecast section to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
           <div class="date" id="clockDate">Loading date…</div>
         </div>
 
+        <section class="panel" aria-label="3-day forecast" style="margin-top:14px;">
+  <div class="label">3-Day Forecast</div>
+  <div class="forecast" id="forecast3">
+    <div class="small">Loading forecast…</div>
+  </div>
+</section>
+
         <div class="block right">
           <div class="label">Current Temp (16124)</div>
           <div class="temp" id="tempF">--°F</div>
